# freeplugins

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_NOTES.md  PROJECT_STATUS.md  README.md  build.bat  build.sh  build_linux.sh
src/: JucePluginDefines.h  PianoRollComponent.cpp  PianoRollComponent.h  PitchDetector.cpp  PitchDetector.h  PitchShifter.cpp  PitchShifter.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
